# RamadanCTF

./: README.md
challenges/: .gitignore
challenges/CRYPTO/CrackTheHash1/: Dockerfile  info.json
challenges/CRYPTO/CrackTheHash1/challenge_files/: challenge.txt  hashes.txt  wordlist.txt
challenges/CRYPTO/CrackTheHash1/writeup/: writeup.md
challenges/CRYPTO/CrackTheHash2/: Dockerfile  info.json
challenges/CRYPTO/RotateThePlanet/: Dockerfile  info.json
challenges/CRYPTO/pROXy/: Dockerfile  info.json
challenges/FORENSICS/: README.md
challenges/FORENSICS/Nothing Here/: Dockerfile  info.json
challenges/FORENSICS/Unknown file/: Dockerfile  info.json
challenges/FORENSICS/ch1/: ch1.py
challenges/FORENSICS/ch2/: capture.pcapng  ch2.py
challenges/FORENSICS/challenge 1/: Dockerfile  info.json
challenges/FORENSICS/challenge 2/: info.json
challenges/FORENSICS/junk/: 1  2  ch1.py  e.py  hi.py  hidden
challenges/MISC/TerraSecure/: Dockerfile  build.sh  main.py  writeup.md
challenges/MISC/kubeleeeeeeeet/: Dockerfile  build.sh  clean.sh  flag-pod.yaml  setup-kind.sh  writeup.md
challenges/MISC/pyjail/: Dockerfile  main.py  secret.py
challenges/OSINT/Matrix/: Dockerfile  info.json
challenges/OSINT/X/: Dockerfile  info.json
challenges/PWN/hexhunt/: Dockerfile
challenges/PWN/hexhunt/src/: CMakeLists.txt  main.c
challenges/PWN/stack-attack/: Dockerfile  notes.md
challenges/PWN/stack-attack/src/: CMakeLists.txt  main.c
challenges/REV/PasswordMystery/: Password Mystery WriteUp.md
challenges/REV/TheLostNote/: Lost Note WriteUp.md
(+49 files in other folders)
